# dspy-prompt-optimizer

./: .gitignore  README.md  pyproject.toml  run_test_user_v1.sh  setup_and_push.sh
dspy_optimizer/: __init__.py  metric.py  optimizer.py  patcher.py
examples/: optimize_chunk_boundary.py
tests/: test_dspy_optimizer.py
